# ollama-mcp

./: client-logged.py  client.py  pyproject.toml  requirements.txt  weather-server.py
psychitrist/: appointments.db  backend.py  frontend.py
